overflow fix

--- a/UIKit/style.css
+++ b/UIKit/style.css
@@ -1,6 +1,10 @@
 .UIBaseContainer {
     overflow: hidden;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .UIKitPanel {
     position: absolute;
